deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: register-app
  template:
    metadata:
      labels:
        app: register-app
    spec:
      containers:
        - name: register-app
          image: bhakthavasthlareddy/register-app-pipeline1:1.0.0-2
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
