service.yaml
apiVersion: v1
kind: Service
metadata:
  name: register-app-service
  labels:
    app: register-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: register-app
